# Fractal

./: .gitignore  CMakeLists.txt  Fractal  README.md  build.bat  build.sh  julia.v  main.py  mandelbrot.py  mandelbrot.v  pallette_generator.py  pallette_generator.v  tree.py
cpp/: Makefile  mandlebrot.cc
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
include/: Camera.hpp  ColorPalette.hpp  Constants.hpp  Fractal.hpp  FractalRenderer.hpp  FractalSimulator.hpp  JuliaFractal.hpp  MandelbrotFractal.hpp  Renderer.hpp  ShaderLoader.hpp  WindowManager.hpp
shaders/: basic.vert  fractal.frag  julia.frag  mandelbrot.frag  mandelbrot.glsl  mandelbrot_shader.glsl
src/: Camera.cpp  ColorPalette.cpp  FractalRenderer.cpp  FractalSimulator.cpp  FractalSimulator.hpp  JuliaFractal.cpp  MandelbrotFractal.cpp  Renderer.cpp  ShaderLoader.cpp  WindowManager.cpp  bird_of_prey.v  burning_ship.v  constants.v  julia.v  main.cpp  main.v  mandelbrot.v  pallette_generator.v  quartic.v  utils.v
src/shaders/: fractal.frag
